--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tilt": "^0.1.4",
+    "react-tsparticles": "^2.0.6",
     "tailwindcss": "^3.0.24",
+    "tsparticles": "^2.0.6",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
